k8s/svc/multicontainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 creationTimestamp: null
 labels:
   app: nginx
   segundo: valor
 name: nginx
spec:
 replicas: 2
 selector:
   matchLabels:
     app: nginx
     segundo: valor
 strategy: {}
 template:
   metadata:
     creationTimestamp: null
     labels:
       app: nginx
       segundo: valor
   spec:
     containers:
     - image: nginx:1.7.1
       name: nginx
       ports:
       - containerPort: 80       
       resources: {}
status: {}
