k8s/svc/podconfigmap.yaml
apiVersion: v1
kind: Pod
metadata:
 name: nginx
spec:
 containers:
 - name: nginx
   image: nginx
   volumeMounts:
     - name: muyconfig
       mountPath:  /opt/
 volumes:
   - name: muyconfig
     configMap:
       name: muyconfig
