k8s/svc/podsecret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
      - name: secreto
        mountPath:  /opt/
  volumes:
    - name: secreto
      secret:
        secretName: muysecret
