k8s/svc/minikube-example2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minikube-example
  labels:
    name: minikube-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insights-app
  labels:
    app: insights-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: insights-app
  template:
    metadata:
      labels:
        app: insights-app
    spec:
      containers:
      - name: insights-app
        image: yeasy/simple-web:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  labels:
    name: hello-app
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
  selector:
    app: hello-app
---
apiVersion: v1
kind: Service
metadata:
  name: insights-app
  labels:
    name: insights-app
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
  selector:
    app: insights-app
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minikube-example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-private-test  
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: minikube-example2.com
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              serviceName: hello-app
              servicePort: 8080    
          - path: /insights
            pathType: Prefix
            backend:
              serviceName: insights-app
              servicePort: 8080
